--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "custom-input-auto-compltite",
-  "version": "0.1.0",
+  "name": "users-list",
+  "version": "1.0.2",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.10",
-    "axios": "^0.19.0",
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^4.0.1",
     "redux": "^4.0.4",
     "redux-create-reducer": "^2.0.0",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.0"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,7 +38,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.5.1",
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "1.18.2"
   }
